# pass_plugin

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  defuse_plugin.cpp  docker-compose.yml  logger.cpp  overlay.py  run_all.sh  test1.c  test2.c
include/: defuse_dump_dot.hpp  defuse_dump_json.hpp  defuse_plugin.hpp
log/dot/: final.dot  graph.dot
log/json/: ir_combined.json  ir_dump.json
runtime/: logger.cpp  overlay.py  overlay_dot.py  overlay_json.py
scripts/: logger.cpp  overlay.py
src/: defuse_dump_dot.cpp  defuse_dump_json.cpp  defuse_plugin.cpp
tests/: test1.c  test2.c  test3.c
